--- a/src/EFCoreEncapsulate.Api/EFCoreEncapsulate.Api.csproj
+++ b/src/EFCoreEncapsulate.Api/EFCoreEncapsulate.Api.csproj
@@ -7,14 +7,9 @@
     <RootNamespace>EFCoreEncapsulate.Api</RootNamespace>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
+	<ItemGroup>
+    <ProjectReference Include="..\EFCoreEncapsulate.Data\EFCoreEncapsulate.Data.csproj" />
+    <ProjectReference Include="..\EFCoreEncapsulate.Model\EFCoreEncapsulate.Model.csproj" />
   </ItemGroup>
 
 </Project>
