--- a/src/EFCoreEncapsulate.Api/EFCoreEncapsulate.Api.csproj
+++ b/src/EFCoreEncapsulate.Api/EFCoreEncapsulate.Api.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\EFCoreEncapsulate.Model\EFCoreEncapsulate.Model.csproj" />
   </ItemGroup>
 
+    <ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+    </ItemGroup>
 </Project>
