Query student (get dto directly)

--- a/src/EFCoreEncapsulate.Api/EFCoreEncapsulate.Api.csproj
+++ b/src/EFCoreEncapsulate.Api/EFCoreEncapsulate.Api.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+    <ProjectReference Include="..\EFCoreEncapsulate.DataContracts\EFCoreEncapsulate.DataContracts.csproj" />
     <ProjectReference Include="..\EFCoreEncapsulate.Data\EFCoreEncapsulate.Data.csproj" />
     <ProjectReference Include="..\EFCoreEncapsulate.Model\EFCoreEncapsulate.Model.csproj" />
   </ItemGroup>
