--- a/src/EFCoreEncapsulate.Data/EFCoreEncapsulate.Data.csproj
+++ b/src/EFCoreEncapsulate.Data/EFCoreEncapsulate.Data.csproj
@@ -19,6 +19,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\EFCoreEncapsulate.DataContracts\EFCoreEncapsulate.DataContracts.csproj" />
 	  <ProjectReference Include="..\EFCoreEncapsulate.Model\EFCoreEncapsulate.Model.csproj" />
 	</ItemGroup>
 
