--- a/src/EFCoreEncapsulate.Domain/EFCoreEncapsulate.Domain.csproj
+++ b/src/EFCoreEncapsulate.Domain/EFCoreEncapsulate.Domain.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="CSharpFunctionalExtensions" Version="2.34.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EFCoreEncapsulate.DataContracts\EFCoreEncapsulate.DataContracts.csproj" />
   </ItemGroup>
 
 </Project>
