--- a/src/EFCoreEncapsulate.Domain/EFCoreEncapsulate.Domain.csproj
+++ b/src/EFCoreEncapsulate.Domain/EFCoreEncapsulate.Domain.csproj
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSharpFunctionalExtensions" Version="2.34.0" />
+    <PackageReference Include="CSharpFunctionalExtensions" Version="2.34.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\EFCoreEncapsulate.DataContracts\EFCoreEncapsulate.DataContracts.csproj" />
+    <ProjectReference Include="..\EFCoreEncapsulate.SharedKernel\EFCoreEncapsulate.SharedKernel.csproj" />
   </ItemGroup>
 
 </Project>
