--- a/src/EFCoreEncapsulate.SharedKernel/EFCoreEncapsulate.SharedKernel.csproj
+++ b/src/EFCoreEncapsulate.SharedKernel/EFCoreEncapsulate.SharedKernel.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CSharpFunctionalExtensions" Version="2.34.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.2" />
   </ItemGroup>
 
