--- a/src/EFCoreEncapsulate.Domain.Test/EFCoreEncapsulate.Domain.Test.csproj
+++ b/src/EFCoreEncapsulate.Domain.Test/EFCoreEncapsulate.Domain.Test.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="FluentAssertions" Version="6.7.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.9" />
+      <PackageReference Include="Moq" Version="4.18.2" />
       <PackageReference Include="xunit" Version="2.4.2" />
     </ItemGroup>
 
