--- a/src/EFCoreEncapsulate.Domain/EFCoreEncapsulate.Domain.csproj
+++ b/src/EFCoreEncapsulate.Domain/EFCoreEncapsulate.Domain.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="CSharpFunctionalExtensions" Version="2.34.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
