--- a/src/EFCoreEncapsulate.Domain.Test/EFCoreEncapsulate.Domain.Test.csproj
+++ b/src/EFCoreEncapsulate.Domain.Test/EFCoreEncapsulate.Domain.Test.csproj
@@ -7,8 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoFixture" Version="4.17.0" />
       <PackageReference Include="FluentAssertions" Version="6.7.0" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.9" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
       <PackageReference Include="Moq" Version="4.18.2" />
       <PackageReference Include="xunit" Version="2.4.2" />
     </ItemGroup>
